tests/vertical-slice/accept/vec_index_assign_round_trip.hew
fn main() -> i64 {
    var v: Vec<i64> = Vec::new();
    v.push(1);
    v.push(2);
    v.push(3);
    v[1] = 20;
    return v[0] + v[1] + v[2];
}
