tests/vertical-slice/reject/move_into_array_vec.hew
fn main() -> i64 {
    let values: Vec<string> = Vec::new();
    values.push("alpha");
    let _items = [values];
    values.len()
}
